--- a/style.css
+++ b/style.css
@@ -9,7 +9,16 @@ body {
     margin: 0;
 }
 
-h3 {
+.heading {
     text-align: center;
 }
 
+.menu {
+    font-size: 25px;
+}
+
+.icon {
+    max-width: 10%;
+    height: 10%;
+    border-radius: 50%;
+}
